Bug #3157 --> Eudora importing fails to detect HTML messages.

Bug #242953 --> Migrate the attachment names in messages during Eudora profile migration instead of using
"Attachment"